feat: define routes for fetching app metrics
