# api_docs.yml
@@ -124,3 +124,138 @@ paths:
           description: "Bad request"
         500:
           description: "Internal Server Error"
+
+  "/projects/{project_id}/apps/{app_id}/metrics/memory":
+    post:
+      tags:
+        - apps
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          description: "Bearer [token]"
+          type: string
+        - in: path
+          name: project_id
+          required: true
+          type: string
+        - in: path
+          name: app_id
+          required: true
+          type: string
+        - in: body
+          name: app metrics
+          schema:
+            properties:
+              start:
+                type: number
+                format: float
+              end:
+                type: number
+                format: float
+              step:
+                type: string
+
+      responses:
+        200:
+          description: "Metrics for a single App"
+        404:
+          description: "App metrics not found"
+        400:
+          description: "Bad request"
+        500:
+          description: "Internal Server Error"
+
+  "/projects/{project_id}/apps/{app_id}/metrics/cpu":
+    post:
+      tags:
+        - apps
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          description: "Bearer [token]"
+          type: string
+        - in: path
+          name: project_id
+          required: true
+          type: string
+        - in: path
+          name: app_id
+          required: true
+          type: string
+        - in: body
+          name: app metrics
+          schema:
+            properties:
+              start:
+                type: number
+                format: float
+              end:
+                type: number
+                format: float
+              step:
+                type: string
+
+      responses:
+        200:
+          description: "Cpu metrics for a single App"
+        404:
+          description: "App metrics not found"
+        400:
+          description: "Bad request"
+        500:
+          description: "Internal Server Error"
+
+  "/projects/{project_id}/apps/{app_id}/metrics/network":
+    post:
+      tags:
+        - apps
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          description: "Bearer [token]"
+          type: string
+        - in: path
+          name: project_id
+          required: true
+          type: string
+        - in: path
+          name: app_id
+          required: true
+          type: string
+        - in: body
+          name: app metrics
+          schema:
+            properties:
+              start:
+                type: number
+                format: float
+              end:
+                type: number
+                format: float
+              step:
+                type: string  
+
+      responses:
+        200:
+          description: "Network metrics for a single App"
+        404:
+          description: "App metrics not found"
+        400:
+          description: "Bad request"
+        500:
+          description: "Internal Server Error"
