# app/routes/__init__.py
@@ -1,7 +1,7 @@
 from flask_restful import Api
 from app.controllers import (
     IndexView, ProjectCPUView, ProjectMemoryUsageView,
-    ProjectNetworkRequestView, IndexView)
+    ProjectNetworkRequestView, AppCpuUsageView, AppMemoryUsageView, AppNetworkUsageView)
 
 api = Api()
 
@@ -14,3 +14,11 @@ api.add_resource(ProjectMemoryUsageView,
                  '/projects/<string:project_id>/metrics/memory')
 api.add_resource(ProjectNetworkRequestView,
                  '/projects/<string:project_id>/metrics/network')
+
+# Apps routes
+api.add_resource(AppMemoryUsageView,
+                 '/projects/<string:project_id>/apps/<string:app_id>/memory')
+api.add_resource(
+    AppCpuUsageView, '/projects/<string:project_id>/apps/<string:app_id>/cpu')
+api.add_resource(AppNetworkUsageView,
+                 '/projects/<string:project_id>/apps/<string:app_id>/network')
